--- a/mainServer/Views/fileupload.cshtml
+++ b/mainServer/Views/fileupload.cshtml
@@ -1,10 +1,10 @@
-<form enctype="multipart/form-data" method="post">
+<form enctype="multipart/form-data" action="fileupload/UploadFile" method="post">
     <dl>
         <dt>
             <label asp-for="FileUpload.FormFile"></label>
         </dt>
         <dd>
-            <input asp-for="FileUpload.FormFile" type="file">
+            <input asp-for="FileUpload.FormFile" type="file" name="file">
             <span asp-validation-for="FileUpload.FormFile"></span>
         </dd>
     </dl>
