--- a/mainServer/Views/Shared/_Layout.cshtml
+++ b/mainServer/Views/Shared/_Layout.cshtml
@@ -66,47 +66,18 @@
             <div class="container">
                 <p class="m-0 text-center text-white">Copyright &copy; Your Website 2021</p>
             </div>
-            <li class="nav-item"><a class="nav-link" href="#!">Test Button</a></li>
         </footer>
-        <!-- Bootstrap core JS-->
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    
+
+    
+        <script src="bower_components/jquery/dist/jquery.slim.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
+       
         <script src="dist/HomePageLayout/js/scripts.js"></script>
+        
+
+        
     </body>
 </html>
 
 
-
-
-
-
-
-
-
-
-<div class="header navigation">
-  
-  <div class="col-xl-9 col-lg-10 col-sm-8 col-7">
-
-    <ul class="navbar-nav flex-row justify-content-end flex-wrap align-items-center mr-lg-4 mr-xl-0">
-
-      <li class="nav-item px-3 text-uppercase mb-0 position-relative d-lg-flex">
-        <div id="cart" class="d-none">
-
-        </div>
-        <a href="/store/cart.stml" class="cart position-relative d-inline-flex" aria-label="View your shopping cart">
-          <i class="fas fa fa-shopping-cart fa-lg"></i>
-          <span class="cart-basket d-flex align-items-center justify-content-center">
-            0
-          </span>
-        </a>
-      </li>
-      <button id="sidenav-open-btn" class="menu-hamburger position-absolute pointer p-0">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-    </ul>
-  </div>
-</div>
