--- a/mainServer/Views/HomePage/index.cshtml
+++ b/mainServer/Views/HomePage/index.cshtml
@@ -1,6 +1,7 @@
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
+    @* Layout = "~/Views/Shared/LoginRegisterLayout.cshtml"; *@
 }
 
         <div class="container">
@@ -39,8 +40,15 @@
                             <span class="sr-only">Next</span>
                         </a>
                     </div>
-                    <div class="row">
-                        <div class="col-lg-4 col-md-6 mb-4">
+
+
+
+
+
+
+
+                    <div class="row" id="product_cards">
+                        @* <div class="col-lg-4 col-md-6 mb-4">
                             <div class="card h-100">
                                 <a href="#!"><img class="card-img-top" src="https://via.placeholder.com/700x400" alt="..." /></a>
                                 <div class="card-body">
@@ -50,8 +58,8 @@
                                 </div>
                                 <div class="card-footer"><small class="text-muted">★ ★ ★ ★ ☆</small></div>
                             </div>
-                        </div>
-                        <div class="col-lg-4 col-md-6 mb-4">
+                        </div> *@
+                        @* <div class="col-lg-4 col-md-6 mb-4">
                             <div class="card h-100">
                                 <a href="#!"><img class="card-img-top" src="https://via.placeholder.com/700x400" alt="..." /></a>
                                 <div class="card-body">
@@ -105,8 +113,56 @@
                                 </div>
                                 <div class="card-footer"><small class="text-muted">★ ★ ★ ★ ☆</small></div>
                             </div>
-                        </div>
+                        </div> *@
                     </div>
                 </div>
             </div>
         </div>
+
+
+
+<script
+          src="https://code.jquery.com/jquery-3.4.1.min.js"
+          integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+          crossorigin="anonymous"></script>
+
+<script type="text/javascript" charset="utf-8">
+
+    LoadProducts();
+    console.log("this is LoadProduct");
+    function LoadProducts(){
+        console.log("this is LoadProduct");
+        
+        $.ajax({
+            type : "GET",
+            url : "/Home/GetProductList",
+            success : function(response){
+                var card_container = $("#product_cards");
+                card_container.empty();
+                console.log("this is success");
+
+                $.each(response, function(i,item){
+                    var file_path = "ProductImages/"+item.file_name;
+                    console.log(file_name_);
+                    $('<div class="col-lg-4 col-md-6 mb-4">').append(
+                        $('<div class="card h-100">').append(
+                            $('<a href="#!"><img class="card-img-top" src="\'' + file_path + '\'" alt="..." />'),
+                            $('<div class="card-body">').append(
+                                $('<a href="#!">').text(item.product_name),
+                                $('<h5>').text("৳"+item.per_unit_price),
+                                $('<a  class="btn btn-outline-secondary" onclick="PackageDetails(\'' + item.package_name + '\')">').text('Add To Cart'),
+                                $('<a  class="btn btn-outline-secondary" onclick="PackageDetails(\'' + item.package_name + '\')">').text('Buy Now')
+                            )
+                        )
+                     ).appendTo(card_container);
+                });
+
+         
+            },
+            failure : function(response){
+                alert(response);
+            }
+        });
+    }
+
+</script>
