--- a/mainServer/Views/Shared/_Layout.cshtml
+++ b/mainServer/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-@model MediShare.Models.LoginModel
+@model mainServer.Controllers.LoginandProductPage
 
 @{
     Layout = null;
@@ -62,9 +62,9 @@
         </div>
 
 
-        <footer class="py-5 bg-dark">
+        <footer id="footer" class="py-5 bg-dark">
             <div class="container">
-                <p class="m-0 text-center text-white">Copyright &copy; Your Website 2021</p>
+                <p class="m-0 text-center text-white">Copyright &copy; MediShare 2021</p>
             </div>
         </footer>
     
