--- a/mainServer/Views/Dashboard/UserDashboard/Index.cshtml
+++ b/mainServer/Views/Dashboard/UserDashboard/Index.cshtml
@@ -195,6 +195,7 @@
         </li>
         <li onClick="pagenav(this, 'Dashboard/UserDashboard/orders.html')"><a href="#"><i class="fa fa-dropbox"></i> <span>My Orders</span></a></li>
         <li onClick="pagenav(this, 'Dashboard/UserDashboard/sales.html')"><a href="#"><i class="fa fa-pie-chart"></i> <span>Sales</span></a></li>
+        <li onClick="pagenav(this, 'Dashboard/UserDashboard/sales.html')"><a href="#"><i class="fa fa-pie-chart"></i> <span>Shop Orders</span></a></li>
         
         
 
