--- a/mainServer/Views/HomePage/index.cshtml
+++ b/mainServer/Views/HomePage/index.cshtml
@@ -1,12 +1,11 @@
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
-    @* Layout = "~/Views/Shared/LoginRegisterLayout.cshtml"; *@
 }
 
         <div class="container">
             <div class="row">
-                <div class="col-lg-2">
+                <div class="col-lg-3">
                     <h3 class="my-4">Categories</h3>
                     <div class="list-group">
                         <ul class="list-group">
@@ -19,7 +18,7 @@
                         
                     </div>
                 </div>
-                <div class="col-lg-10">
+                <div class="col-lg-9">
                     <div class="carousel slide my-4" id="carouselExampleIndicators" data-ride="carousel">
                         <ol class="carousel-indicators">
                             <li class="active" data-target="#carouselExampleIndicators" data-slide-to="0"></li>
@@ -27,9 +26,12 @@
                             <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
                         </ol>
                         <div class="carousel-inner" role="listbox">
-                            <div class="carousel-item active"><img class="d-block img-fluid" src="https://via.placeholder.com/900x350" alt="First slide" /></div>
+                            @* <div class="carousel-item active"><img class="d-block img-fluid" src="https://via.placeholder.com/900x350" alt="First slide" /></div>
                             <div class="carousel-item"><img class="d-block img-fluid" src="https://via.placeholder.com/900x350" alt="Second slide" /></div>
-                            <div class="carousel-item"><img class="d-block img-fluid" src="https://via.placeholder.com/900x350" alt="Third slide" /></div>
+                            <div class="carousel-item"><img class="d-block img-fluid" src="https://via.placeholder.com/900x350" alt="Third slide" /></div> *@
+                            <div class="carousel-item active"><img  src="WebsiteImages/slide_1.jpg" width="900" height="350" alt="First slide" /></div>
+                            <div class="carousel-item"><img  src="WebsiteImages/slide_2.jpg" width="900" height="350" alt="Second slide" /></div>
+                            <div class="carousel-item"><img  src="WebsiteImages/slide_3.PNG" width="900" height="350" alt="Third slide" /></div>
                         </div>
                         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -48,7 +50,112 @@
 
 
                     <div class="row" id="product_cards">
-                        @* <div class="col-lg-4 col-md-6 mb-4">
+                       
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+<script
+          src="https://code.jquery.com/jquery-3.4.1.min.js"
+          integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+          crossorigin="anonymous"></script>
+
+<script type="text/javascript" charset="utf-8">
+
+    LoadProducts();
+
+    function LoadProducts(){
+        console.log("this is LoadProduct");
+        
+        $.ajax({
+            type : "GET",
+            url : "/Home/GetProductList",
+            success : function(response){
+                var card_container = $("#product_cards");
+                card_container.empty();
+
+                $.each(response, function(i,item){
+                    var file_path = "ProductImages/"+item.file_name;
+
+                    $('<div class="col-lg-3 col-md-5 mb-3">').append(
+                        $('<div class="card h-65">').append(
+                            $('<a href="/ProductPage?product_id='+item.product_id+'"><img class="card-img-top" src='+ file_path +' width="200" height="100" alt="..." />'),
+                            $('<div class="card-body">').append(
+                                $('<a href="/ProductPage?product_id='+item.product_id+'">').text(item.product_name),
+                                $('<h5>').text("৳"+item.per_unit_price+".00"),
+                                @* $('<a  class="btn btn-outline-secondary" onclick="PackageDetails(\'' + item.package_name + '\')">').text('Add To Cart'), *@
+                                @* $('<a  class="btn btn-outline-secondary" onclick="PackageDetails(\'' + item.package_name + '\')">').text('Buy Now') *@
+                            )
+                        )
+                     ).appendTo(card_container);
+                });
+
+         
+            },
+            failure : function(response){
+                alert(response);
+            }
+        });
+    }
+
+</script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ @* <div class="col-lg-4 col-md-6 mb-4">
                             <div class="card h-100">
                                 <a href="#!"><img class="card-img-top" src="https://via.placeholder.com/700x400" alt="..." /></a>
                                 <div class="card-body">
@@ -114,55 +221,3 @@
                                 <div class="card-footer"><small class="text-muted">★ ★ ★ ★ ☆</small></div>
                             </div>
                         </div> *@
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-
-<script
-          src="https://code.jquery.com/jquery-3.4.1.min.js"
-          integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-          crossorigin="anonymous"></script>
-
-<script type="text/javascript" charset="utf-8">
-
-    LoadProducts();
-    console.log("this is LoadProduct");
-    function LoadProducts(){
-        console.log("this is LoadProduct");
-        
-        $.ajax({
-            type : "GET",
-            url : "/Home/GetProductList",
-            success : function(response){
-                var card_container = $("#product_cards");
-                card_container.empty();
-                console.log("this is success");
-
-                $.each(response, function(i,item){
-                    var file_path = "ProductImages/"+item.file_name;
-                    console.log(file_name_);
-                    $('<div class="col-lg-4 col-md-6 mb-4">').append(
-                        $('<div class="card h-100">').append(
-                            $('<a href="#!"><img class="card-img-top" src="\'' + file_path + '\'" alt="..." />'),
-                            $('<div class="card-body">').append(
-                                $('<a href="#!">').text(item.product_name),
-                                $('<h5>').text("৳"+item.per_unit_price),
-                                $('<a  class="btn btn-outline-secondary" onclick="PackageDetails(\'' + item.package_name + '\')">').text('Add To Cart'),
-                                $('<a  class="btn btn-outline-secondary" onclick="PackageDetails(\'' + item.package_name + '\')">').text('Buy Now')
-                            )
-                        )
-                     ).appendTo(card_container);
-                });
-
-         
-            },
-            failure : function(response){
-                alert(response);
-            }
-        });
-    }
-
-</script>
