--- a/mainServer/Views/Shared/_Layout.cshtml
+++ b/mainServer/Views/Shared/_Layout.cshtml
@@ -62,11 +62,11 @@
         </div>
 
 
-        <footer id="footer" class="py-5 bg-dark">
+        @* <footer id="footer" class="py-5 bg-dark">
             <div class="container">
                 <p class="m-0 text-center text-white">Copyright &copy; MediShare 2021</p>
             </div>
-        </footer>
+        </footer> *@
     
 
     
@@ -74,6 +74,8 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
        
         <script src="dist/HomePageLayout/js/scripts.js"></script>
+
+        
         
 
         
