--- a/mainServer/Views/Dashboard/UserDashboard/Index.cshtml
+++ b/mainServer/Views/Dashboard/UserDashboard/Index.cshtml
@@ -190,7 +190,7 @@
       <ul class="sidebar-menu" data-widget="tree" id="left-sidebar">
         <li class="header">Options</li>
         <!-- Optionally, you can add icons to the links -->
-        <li onClick="pagenav(this, 'Dashboard/Overview.html')" class="active"><a href="#"><i class="fa fa-user"></i> 
+        <li onClick="pagenav(this, 'Dashboard/UserDashboard/profile.html')" class="active"><a href="#"><i class="fa fa-user"></i> 
           <span>Profile</span></a>
         </li>
         <li onClick="pagenav(this, 'Dashboard/UserDashboard/orders.html')"><a href="#"><i class="fa fa-dropbox"></i> <span>My Orders</span></a></li>
