--- a/mainServer/wwwroot/Extensions/EmailVerificationView.cshtml
+++ b/mainServer/wwwroot/Extensions/EmailVerificationView.cshtml
@@ -29,7 +29,7 @@ div {text-align: center;}
     window.setTimeout(function(){
 
         // Move to a new location or you can do something else
-        window.location.href = "https://162.55.161.40/login";
+        window.location.href = "https://localhost:5001/login";
 
     }, 6000);
 </script>
