--- a/mainServer/Views/HomePage/CartPage.cshtml
+++ b/mainServer/Views/HomePage/CartPage.cshtml
@@ -26,13 +26,26 @@
                 <P id="total_price"></P>
             </div>
         </div>
-        <div style=" display: flex; justify-content: flex-end; margin-right:200px;">
-            <p>Address:</p>
-            <br>
-            <p id="address"></p><br>
-            <a  class="btn btn-outline-secondary">Submit Order</a>
-        </div>
+        
+        
     </div>
+    <div style=" display: flex; justify-content: flex-end; margin-right:200px;">
+            <br>
+            <p id="address"></p>
+            <br><br> 
+            
+    </div>
+     <div style=" display: flex; justify-content: flex-end; margin-right:150px;">
+            
+            <p id="phone"></p>
+            <br>
+            
+    </div>
+     <div style=" display: flex; justify-content: flex-end; margin-right:200px;">
+            <a  class="btn btn-outline-danger" href="/Payment/DemoPayment2">Submit Order</a>
+            
+    </div>
+        
 
     
 </div>
@@ -47,12 +60,12 @@
 
 <script>
 
-
+var totalprice = 0;
 
 LoadCart();
 function LoadCart(){
 
-    var totalprice = 0;
+    
     $.ajax({
             type: "GET",
             url: "/Payment/GetCartList",
@@ -92,7 +105,29 @@ function LoadCart(){
                 alert(response);
             }
         });
+        @* GetAddressandPhone(totalprice); *@
 }
+
+GetAddressandPhone();
+
+function GetAddressandPhone(){
+
+
+        $.ajax({
+            type: "GET",
+            url: "/Payment/GetAddressandPhone",
+            success: function(response) {
+                document.getElementById('address').innerHTML = "Address :  "+response[0].user_address;
+                document.getElementById('phone').innerHTML = "Phone :  "+response[0].phone;
+            },
+
+            failure: function(response) {
+                alert(response);
+            }
+        });
+   
+}
+
 
 
 </script>
