--- a/mainServer/Views/Shared/_Layout.cshtml
+++ b/mainServer/Views/Shared/_Layout.cshtml
@@ -62,11 +62,11 @@
         </div>
 
 
-        @* <footer id="footer" class="py-5 bg-dark">
+        <footer style="position: sticky;top:100%">
             <div class="container">
                 <p class="m-0 text-center text-white">Copyright &copy; MediShare 2021</p>
             </div>
-        </footer> *@
+        </footer>
     
 
     
