--- a/mainServer/Views/Shared/_Layout.cshtml
+++ b/mainServer/Views/Shared/_Layout.cshtml
@@ -32,15 +32,14 @@
                         <li class="nav-item"><a class="nav-link" href="/CartPage">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
                             <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
-                            </svg><i class="bi bi-cart">cart</i></a></li>
+                            </svg><i class="bi bi-cart">cart<p id="cart_val"></p> </i></a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">Services</a></li>
                         @* <li class="nav-item"><a class="nav-link" href="/Login">Login/Register</a></li> *@
                         @{
                             if(Model.password != "n"){
                                 @* <li class="nav-item"><a class="nav-link" href="/UserDashboard">@Model.email</a></li> *@
                                 <div class="btn-group">
-                                    <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                                                    aria-expanded="false">
+                                    <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown">
                                                     @Model.email
                                     </button>
                                         <div class="dropdown-menu">
@@ -74,8 +73,24 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
        
         <script src="dist/HomePageLayout/js/scripts.js"></script>
+        <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 
-        
+        <script> 
+            CartVal();
+            function CartVal(){
+                $.ajax({
+                    type: "GET",
+                    url: "/Home/CartVal",
+                    success: function(response){
+                        document.getElementById('cart_val').innerHTML = "("+ response + ")";
+                        console.log(response);
+                    },
+                    failure: function(response){
+                        alert("something wrong");
+                    }
+                });
+            }
+        </script>
         
 
         
