--- a/mainServer/Views/Shared/_Layout.cshtml
+++ b/mainServer/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
                 <a href="/" class="logo">
-                    <span class="logo-lg"><i class="fas fa-clinic-medical" style="color: #c5eaff"></i>MediShare</span>
+                    <span class="logo-lg"><i class="fas fa-clinic-medical" style="color: #c5eaff"></i><img src="WebsiteImages/logo_top.jpg" width="85" height="64" alt="Main Logo"></span>
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
