--- a/mainServer/Views/Dashboard/UserDashboard/Index.cshtml
+++ b/mainServer/Views/Dashboard/UserDashboard/Index.cshtml
@@ -104,7 +104,7 @@
           </li>-->
           <!-- Control Sidebar Toggle Button -->
           <li>
-            <a href="#" data-toggle="control-sidebar"><i class="fa fa-gears"></i></a>
+            @* <a href="#" data-toggle="control-sidebar"><i class="fa fa-gears"></i></a> *@
           </li>
           <!-- User Account Menu -->
           <li class="dropdown user user-menu">
@@ -113,7 +113,7 @@
               <!-- The user image in the navbar-->
               <!--<img src="dist/img/user2-160x160.jpg" class="user-image" alt="User Image">-->
               <!-- hidden-xs hides the username on small devices so only the image appears. -->
-              <span class="hidden-xs">Hello</span>
+              @* <span class="hidden-xs">Hello</span> *@
             </a>
             <ul class="dropdown-menu">
               <!-- The user image in the menu -->
@@ -202,13 +202,13 @@
         
         
       
-        <li class="treeview">
-          <a href="#"><i class="fa fa-support"></i> 
-            <span>Support</span>
+        @* <li class="treeview">
+          <a href="#"><i class="fa fa-support"></i>  
+             <span>Support</span>
             <span class="pull-right-container">
               <i class="fa fa-angle-left pull-right"></i>
             </span>
-          </a>
+          </a> *@
           <ul class="treeview-menu">
             <!--<li><a href="#"><i class="fa fa-circle-o"></i><span>User Manual</span></a></li>
             <li><a href="#"><i class="fa fa-circle-o"></i><span>Knowledge base</span></a></li>
@@ -243,10 +243,10 @@
   <footer class="main-footer">
     <!-- To the right -->
     <div class="pull-right hidden-xs">
-      <a href="javascript: void(0);">Contact Us   </a>
+      @* <a href="javascript: void(0);">Contact Us   </a> *@
     </div>
     <!-- Default to the left -->
-    <script>document.write(new Date().getFullYear())</script> © Hyper - <a href="#">Coderthemes.com</a>.</strong>
+    @* <script>document.write(new Date().getFullYear())</script> © Hyper - <a href="#">Coderthemes.com</a>.</strong> *@
   </footer>
 
   <!-- Control Sidebar -->
