--- a/mainServer/Views/Shared/_Layout.cshtml
+++ b/mainServer/Views/Shared/_Layout.cshtml
@@ -78,6 +78,8 @@
 <footer class="sticky-footer">
     <div class="container">
         <p class="m-0 text-center text-white">Copyright &copy; MediShare 2022</p>
+        @* <p class="m-0 text-center text-white">Created by Abdullah Al Amin</p>
+        <p class="m-0 text-center text-white">CSE KUET</p> *@
     </div>
 </footer>
 
